src/test/compile-fail/simd-type.rs
type v = f32 ^ 0; //~ ERROR expected SIMD vector length

fn main() {}
